fix: create account overlap fixed

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -386,4 +386,8 @@ input.password--with_toggle,
     .help-buttons{
         right: unset;
     }
+    .signin-link{
+        margin-bottom: 3rem;
+    }
+
   }
